[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/designer_page.gd" id="1_script"]

[node name="DesignerPage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Ship Designer"

[node name="InfoPanel" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/InfoPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Control" type="Control" parent="VBoxContainer/InfoPanel/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/InfoPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="ShipNameLabel" type="Label" parent="VBoxContainer/InfoPanel/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.737255, 0.831373, 1)
theme_override_font_sizes/font_size = 18
text = "Active Class: Corvette"

[node name="StatsLabel" type="Label" parent="VBoxContainer/InfoPanel/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.666667, 0.666667, 0.666667, 1)
text = "HP: 100 | ATK: 10 | DEF: 0"

[node name="Control2" type="Control" parent="VBoxContainer/InfoPanel/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 4

[node name="AmmoPanel" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/AmmoPanel"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 0

[node name="Label" type="Label" parent="VBoxContainer/AmmoPanel/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.737255, 0.831373, 1)
theme_override_font_sizes/font_size = 14
text = "  AMMO BAY (Auto-Load):"
vertical_alignment = 1

[node name="AmmoOption" type="OptionButton" parent="VBoxContainer/AmmoPanel/HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="StatusLabel" type="Label" parent="VBoxContainer/AmmoPanel/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.533333, 0.533333, 0.533333, 1)
text = "Ready"

[connection signal="item_selected" from="VBoxContainer/AmmoPanel/HBoxContainer/AmmoOption" to="." method="_on_ammo_option_item_selected"]
