extends Control

@onready var ship_name_lbl = $VBoxContainer/MainLayout/LeftPanel/InfoPanel/Margin/VBox/ShipNameLabel
@onready var stats_lbl = $VBoxContainer/MainLayout/LeftPanel/InfoPanel/Margin/VBox/StatsLabel

# Spatial Boxes
@onready var w_box = $VBoxContainer/MainLayout/SchematicArea/SlotMap/WeaponBox
@onready var util_box = $VBoxContainer/MainLayout/SchematicArea/SlotMap/UtilityBox
@onready var ammo_slot_box = $VBoxContainer/MainLayout/SchematicArea/SlotMap/AmmoSlotBox

# Storage
@onready var storage_grid = $VBoxContainer/MainLayout/RightPanel/Scroll/UnifiedStorageGrid
@onready var silhouette = $VBoxContainer/MainLayout/SchematicArea/Silhouette
@onready var circuit_bg = $VBoxContainer/MainLayout/SchematicArea/CircuitBackground

# Filter Buttons
@onready var f_all = $VBoxContainer/MainLayout/RightPanel/FilterConsole/FilterStrip/AllBtn
@onready var f_wpn = $VBoxContainer/MainLayout/RightPanel/FilterConsole/FilterStrip/WpnBtn
@onready var f_sys = $VBoxContainer/MainLayout/RightPanel/FilterConsole/FilterStrip/SysBtn
@onready var f_ord = $VBoxContainer/MainLayout/RightPanel/FilterConsole/FilterStrip/OrdBtn

var manager: RefCounted
var active_filter = "all"
var slot_widget_scene = preload("res://scenes/ui/designer_slot_widget.tscn")
var ammo_slot_scene = preload("res://scenes/ui/designer_ammo_slot_widget.tscn")
var draggable_icon_scene = preload("res://scenes/ui/module_card.tscn") 

func _ready():
	manager = GameState.shipyard_manager
	visibility_changed.connect(_on_visibility_changed)
	GameState.game_loaded.connect(trigger_refresh)
	
	# Premium Styling
	UITheme.apply_card_style($VBoxContainer/MainLayout/LeftPanel/InfoPanel, "shipyard")
	UITheme.apply_card_style($VBoxContainer/MainLayout/RightPanel, "engineering")
	
	$VBoxContainer/Label.add_theme_color_override("font_color", UITheme.CATEGORY_COLORS["shipyard"])
	
	f_all.pressed.connect(func(): _on_filter_changed("all"))
	f_wpn.pressed.connect(func(): _on_filter_changed("wpn"))
	f_sys.pressed.connect(func(): _on_filter_changed("sys"))
	f_ord.pressed.connect(func(): _on_filter_changed("ord"))
	
	circuit_bg.draw.connect(_on_circuit_draw)
	
	trigger_refresh()

func _on_visibility_changed():
	if visible:
		trigger_refresh()

func trigger_refresh():
	update_header()
	sync_silhouette()
	rebuild_slots()
	rebuild_ammo_slots()
	rebuild_storage()
	# rebuild_ammo_storage() -> Consolidated into rebuild_storage

func update_header():
	if manager.active_hull and manager.active_hull in manager.hulls:
		var h = manager.hulls[manager.active_hull]
		ship_name_lbl.text = h["name"]
		var e_max = GameState.resources.max_energy
		var e_used = manager.energy_used
		stats_lbl.text = "HP: %d | SHIELD: %d\nENERGY: %d/%d\nATK: %d | DEF: %d" % [manager.max_hp, manager.max_shield, e_used, e_max, manager.attack, manager.defense]
		stats_lbl.modulate = Color(1, 0.3, 0.3) if e_used > e_max else Color(0.8, 0.8, 0.8)
	else:
		ship_name_lbl.text = "No Structure"
		stats_lbl.text = "Escape Pod Active"

func rebuild_slots():
	for box in [w_box, util_box]:
		if box:
			for child in box.get_children(): child.queue_free()
			
	if not manager.active_hull in manager.hulls: return
	
	var h_data = manager.hulls[manager.active_hull]
	var slots = h_data["slots"]
	for i in range(slots.size()):
		var s_type = slots[i]
		var w = slot_widget_scene.instantiate()
		var target = util_box # Default to utility
		
		# Spatially route weapons to the top-box
		if s_type == "weapon":
			target = w_box
		
		if target:
			target.add_child(w)
			w.setup(i, s_type, self, manager)

func sync_silhouette():
	if not manager.active_hull: return
	var h = manager.hulls.get(manager.active_hull)
	if h and h.has("visual"):
		silhouette.texture = load(h["visual"])

func rebuild_ammo_slots():
	for child in ammo_slot_box.get_children(): child.queue_free()
	
	if not manager.active_hull in manager.hulls: return
	
	var h_data = manager.hulls[manager.active_hull]
	var slots = h_data["slots"]
	
	for i in range(slots.size()):
		if slots[i] == "weapon":
			var slot = ammo_slot_scene.instantiate()
			ammo_slot_box.add_child(slot)
			slot.setup(i, self, manager)

func rebuild_storage():
	for child in storage_grid.get_children(): child.queue_free()
	
	# Modules
	var inv = manager.module_inventory
	for mid in inv:
		var count = inv[mid]
		if count > 0 and mid in manager.modules:
			var data = manager.modules[mid]
			var type = data.get("slot_type", "weapon")
			
			var show = false
			if active_filter == "all": show = true
			elif active_filter == "wpn" and type == "weapon": show = true
			elif active_filter == "sys" and type in ["shield", "engine", "battery"]: show = true
			
			if show:
				var item = draggable_icon_scene.instantiate()
				storage_grid.add_child(item)
				item.setup(mid, data, count)
			
	# Ammo
	if active_filter in ["all", "ord"]:
		var ammo_list = [
			{"name": "Ferrite Rounds", "id": "SlugT1"},
			{"name": "Tungsten Sabot", "id": "SlugT2"},
			{"name": "Focus Crystal", "id": "CellT1"},
			{"name": "Plasma Cell", "id": "CellT2"}
		]
		for ammo in ammo_list:
			var qty = GameState.resources.get_element_amount(ammo["id"])
			if qty > 0:
				var card = draggable_icon_scene.instantiate()
				storage_grid.add_child(card)
				var fake_data = {"name": ammo["name"], "slot_type": "ammo", "stats": {}}
				card.setup(ammo["id"], fake_data, qty)

func rebuild_ammo_storage():
	pass # Unified into rebuild_storage

func _on_filter_changed(filter_id: String):
	active_filter = filter_id
	# Sync buttons
	f_all.button_pressed = (filter_id == "all")
	f_wpn.button_pressed = (filter_id == "wpn")
	f_sys.button_pressed = (filter_id == "sys")
	f_ord.button_pressed = (filter_id == "ord")
	
	rebuild_storage()

func get_module_widget(module_id: String) -> Control:
	for child in storage_grid.get_children():
		if child.get("mid") == module_id:
			return child
	return null

func _on_circuit_draw():
	# Draw glowing lines between slots that are next to each other
	var accent = UITheme.COLORS["accent_bright"]
	var boxes = [w_box, util_box]
	
	for box in boxes:
		var children = box.get_children()
		if children.size() < 2: continue
		
		for i in range(children.size() - 1):
			var s1 = children[i]
			var s2 = children[i+1]
			
			# Only draw if BOTH are occupied
			if s1.get("is_occupied") and s2.get("is_occupied"):
				var p1 = s1.global_position + (s1.size / 2.0) - circuit_bg.global_position
				var p2 = s2.global_position + (s2.size / 2.0) - circuit_bg.global_position
				
				# Glow line (thick blurred behind)
				circuit_bg.draw_line(p1, p2, Color(accent, 0.3), 6.0, true)
				# Core line (thin bright)
				circuit_bg.draw_line(p1, p2, accent, 1.5, true)

func _process(_delta):
	# Refresh circuit lines
	circuit_bg.queue_redraw()
